--- a/packages/twenty-website/src/content/user-guide/collaboration/tasks.mdx
+++ b/packages/twenty-website/src/content/user-guide/collaboration/tasks.mdx
@@ -13,7 +13,7 @@ Creating tasks in Twenty is seamless. You can either:
 
 -  Go to the `Tasks`tab and press the `+` button at the top right of the page.
 -  Use the search function by pressing `cmd/ctrl + k`, then select 'Create task' from the list of quick actions.
--  Go to a `Record page` and press `+`at the top right of the page, or go to the Task tab and press the `Add Task`button. 
+-  Go to a `Record page` and press `+` at the top right of the page, or go to the Task tab and press the `Add Task` button.
 
 <div style={{padding:'70.59% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
@@ -36,7 +36,7 @@ Creating tasks in Twenty is seamless. You can either:
 
 ### Adding Task Content
 
-Once you've created a task you can enrich it with rich content, such as Titles, Bullet points or even images. To do so, press "/" and enter the desired command.
+Once you've created a task you can enrich it with rich content, such as Titles, Bullet points or even images. To do so, press `/` and enter the desired command.
 
 ## Viewing Tasks
 
