--- a/packages/twenty-website/src/content/user-guide/data-model/fields.mdx
+++ b/packages/twenty-website/src/content/user-guide/data-model/fields.mdx
@@ -15,7 +15,7 @@ Fields in an object are akin to the column names in an Excel spreadsheet, indica
 
 The platform includes Standard Fields by default as predefined fields designed to meet common, universal requirements in business modeling.
 
-As an example, "First Name" and "Last Name" are standard fields within the `people object`. They're text fields, meant to capture and store the respective names of individuals. 
+As an example, "First Name" and "Last Name" are standard fields within the `People` object. They're text fields, meant to capture and store the respective names of individuals.
 
 As essential parts of the data model, you can't delete them, but only deactivate them.
 
@@ -33,7 +33,7 @@ For instance, a custom field for SpaceX could be "Rocket Active Status", indicat
 
 To add a custom field to any object, follow these steps:
 	1.	Go to `Settings` in the left sidebar.
-	2.	Go to `Data Model`, then select the object you wish to customize
+	2.	Go to `Data Model`, then select the object you wish to customize.
 	3.	Proceed by clicking on `Add Field`.
 	4.	Choose a field name and type that suits your requirements. Consider adding a field description for better understanding.
 
