--- a/packages/twenty-website/src/content/user-guide/getting-started/configure-workspace-in-three-steps.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/configure-workspace-in-three-steps.mdx
@@ -19,7 +19,7 @@ If you have not done so when creating your workspace, connect you **Google or Mi
 - Auto-create contacts based on interactions (optional)
 - Keep communication history visible for your team
 
-You can do so under Settings → Accounts.
+You can do so under Settings > Accounts.
 
 You control which contacts are imported in Twenty and what gets shared with the rest of your team: full message content, subject and the metadata (sender, date, subject), or just the metadata. This is the same for your meetings.
 You can configure the visibility and the contact creation preferences under Settings → Email / Calendar.
@@ -33,8 +33,8 @@ You can add email accounts from any provider that supports IMAP and send emails 
 Use the csv import to add contacts who are not in your mailbox, product data or existing enrichment you might have, as well as your previous deals, notes, tasks.
 Import via csv is available for any custom object.
 
-To import the csv file, make sure to open the Command menu ( ```Cmd + K``` or ```Ctrl + K```) from a view listing the object you're about to upload.  
-Then, click on ```Import records```. 
+To import the csv file, make sure to open the Command menu ( `Cmd + K` or `Ctrl + K`) from a view listing the object you're about to upload.
+Then, click on `Import records`.
 
 Below are a few guidelines:
 
@@ -51,11 +51,11 @@ Read [this article](https://twenty.com/user-guide/section/integrations/import-ex
 
 # 2. Customize your data model
 Twenty offers the flexibility you need to shape the data model that will best support your day-to-day.   
-Create objects and fields of any type, inlcuding relations between your different objects. You can do so under Settings → Data Model.
+Create objects and fields of any type, including relations between your different objects. You can do so under Settings > Data Model.
 Here are a few tips:
 - **You are not limited in the number of custom fields nor custom objects**. Adding custom objects and fields will not lead to upgrading your plan.
 - **People and Companies are the two objects from where you will be able to access the emails and meetings**. We recommend using those as much as possible, adding fields to categorize your records if need be. Here is an example:
-  - It is best to use the People object for your prospects and partners, creating a field on the People object named ```Person Type```, instead of creating a Partner custom object (from where you will not be able to access the emails exchanged with this person).
+  - It is best to use the People object for your prospects and partners, creating a field on the People object named `Person Type`, instead of creating a Partner custom object (from where you will not be able to access the emails exchanged with this person).
   - Create different views under People, one to display partners and one to display prospects. 
 - Two People cannot have the same email address. Two Companies cannot have the same domain. 
 - You can deactivate fields and objects you do not want to use.
@@ -68,12 +68,12 @@ Read [this article](https://twenty.com/user-guide/section/data-model/customize-y
 Creating different views is key to make the data actionable for your team.
 Here is how to proceed:
 -  **Add or hide columns**
-    - Manage the fields visible in a given view clicking on Options  → Fields (from the top right). You can show/hide fields from there.
-    - If the need is punctual, hide a column clicking on its name and then ```Hide```. Add a column clicking on the ```+``` at the very right of the table and select the one you need.
+    - Manage the fields visible in a given view clicking on Options > Fields (from the top right). You can show/hide fields from there.
+    - If the need is punctual, hide a column clicking on its name and then `Hide`. Add a column clicking on the `+` at the very right of the table and select the one you need.
 
 - **Reorder fields**
     - Reorder the fields from a given view clicking on Options  → Fields (from the top right). Drag and drop the fields to reorder them. 
-    - If the need is punctual, you can ```Move Left/Right``` a column by clicking on its name.
+    - If the need is punctual, you can `Move Left/Right` a column by clicking on its name.
 
 - **Filter records**
     - This is done from the top right.
@@ -85,8 +85,8 @@ Here is how to proceed:
 -  **Save** your view and rename it
 
 -  **Choose the layout** 
-    - You can switch to a **Kanban layout** or a **Group By** layout -- as long as the object has a “Stage” or similar select-type field.  
--  **Add it to your Favorties** 
+    - You can switch to a **Kanban layout** or a **Group By** layout - as long as the object has a “Stage” or similar select-type field.
+-  **Add it to your Favourites**
     - This can be done using the dropdown menu showing the different views.
 
 
