--- a/packages/twenty-website/src/content/user-guide/getting-started/getting-around-twenty.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/getting-around-twenty.mdx
@@ -9,7 +9,7 @@ sectionInfo: Discover Twenty, an open-source CRM.
 When you log into Twenty for the first time, the layout should feel intuitive. It’s designed to help you move fast and stay organized, without getting in your way.
 
 ## The Main Layout
-The center of the screen is **where your records live** —people, companies, opportunities, tasks, notes, workflows and any other object you created. This is where the day-to-day work happens.
+The center of the screen is **where your records live** — people, companies, opportunities, tasks, notes, workflows and any other object you created. This is where the day-to-day work happens.
 You can **view, edit, delete records** from there as well as **creating new views**. 
 
 ## The Navigation Bar
@@ -19,7 +19,7 @@ On the left side, from the top to the bottom, you’ll be able to:
 - Use the **search bar** (press ```/``` to open it instantly)
 - Open the **Settings** section  
   **Please note that our API documentation is accessible under the Settings section and not the User Guide.**
-- Have a direct access to your **Favourites views**. Favourites are unique for each user.
+- Have direct access to your **Favourites views**. Favourites are unique for each user.
 - Switch between different objects
 - **Create automations** using workflows
 - Reach out to Support and open our User Guide.
@@ -55,7 +55,7 @@ Open your Settings from the top left to
 - Invite members
 - Edit your profile
 - Customize your workspace: billing, user permissions
-- Discover the latest releases and the upcoming features (under Releases → Lab tab)
+- Discover the latest releases and the upcoming features (under Releases > Lab tab)
 
 If you do not see all those sections under Settings, reach out to your workspace administrator - some of them have a restricted access. 
 
