--- a/packages/twenty-website/src/content/user-guide/integrations/api-webhooks.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/api-webhooks.mdx
@@ -80,7 +80,7 @@ For instance, a webhook can alert your system in real-time when someone creates 
 
 ### Creating Webhooks
 
-1. From Settings → APIs & Webhooks → Webhooks, click `+` Create webhook.
+1. From Settings > APIs & Webhooks → Webhooks, click `+` Create webhook.
 2. Enter your URL.
 3. Click Save.
 
@@ -105,7 +105,7 @@ For instance, a webhook can alert your system in real-time when someone creates 
 
 ### Deleting Webhooks
 
-1. In Settings → APIs & Webhooks → Webhooks, find your webhook.
+1. In Settings > APIs & Webhooks → Webhooks, find your webhook.
 2. Click on your webhook and press **Delete** to remove it. A confirmation popup will appear to confirm.
 
 <ArticleEditContent></ArticleEditContent>
