--- a/packages/twenty-website/src/content/user-guide/integrations/emails.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/emails.mdx
@@ -30,7 +30,7 @@ You can customize how you share and manage your emails through the settings.
 
 ### Connecting a New Mailbox
 
-To connect a Gmail mailbox, go to `Settings` > `Accounts`, then click the `Add account` button. You can add several mailboxes to your account.
+To connect a Gmail mailbox, go to Settings > Accounts, then click the `Add account` button. You can add several mailboxes to your account.
 
 After connecting a mailbox, visit the `Emails` tab and select the desired mailbox to customize its settings.
 
