--- a/packages/twenty-website/src/content/user-guide/integrations/getting-started-workflows.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/getting-started-workflows.mdx
@@ -31,7 +31,7 @@ Below are a few examples of what you can build.
 - Give your sellers the context they need to be on top of their accounts, bringing **product data** in Twenty
 - Connect your **call recorder** to automatically create a Note in Twenty with the summary of a meeting and a Task with the action items
 - Enrich your leads with demographics enrichment to know who your team is talking to
-- Send the informations needed to generate an invoice when a deal is closed
+- Send the information needed to generate an invoice when a deal is closed
 
 To do so, you will mainly leverage the ```On a schedule``` and ```Webhook``` triggers, as well as the ```HTTP``` and ```Code``` functions. 
 
@@ -39,7 +39,7 @@ To do so, you will mainly leverage the ```On a schedule``` and ```Webhook``` tri
 We offer [Implementation Services](https://twenty.com/implementaion-services) to help you create the automations you need.  
 Depending on the scope of you project, we will suggest an [Onboarding pack](https://twenty.com/onboarding-packages) or we will put you in contact with our certified implementation partners. They can create your data model, migrate your data, build your workflows.  
 
-### I'm not sure the connection I need to doable 
+### I'm not sure the connection I need is doable
 Send us a message and we will help you assess the feasibility. 
 
 ## What we're working on
