--- a/packages/twenty-website/src/content/user-guide/pricing/billing-and-pricing-faq.mdx
+++ b/packages/twenty-website/src/content/user-guide/pricing/billing-and-pricing-faq.mdx
@@ -9,7 +9,7 @@ sectionInfo: Understand how Twenty pricing works.
 <details>
 <summary><strong>Where can I switch my subscription to the Organization plan?</strong></summary>
 
-You can do so under `Settings / Billing`. Then click on `Switch to Organization`.
+You can do so under `Settings > Billing`. Then click on `Switch to Organization`.
 
 </details>
 
@@ -23,7 +23,7 @@ Please reach out to our team directly via the Support, there is no easy way to d
 <details>
 <summary><strong>Where can I switch my subscription to Yearly?</strong></summary>
 
-You can do so under `Settings / Billing`. Then click on `Switch to Yearly`.
+You can do so under `Settings > Billing`. Then click on `Switch to Yearly`.
 
 </details>
 
@@ -37,7 +37,7 @@ Please reach out to our team directly via the Support, there is no easy way to d
 <details>
 <summary><strong>Where can I see my credit usage?</strong></summary>
 
-You will find this under `Settings / Billing`.
+You will find this under `Settings > Billing`.
 
 </details>
 
@@ -62,28 +62,28 @@ This is coming soon! Reach out to us directly in the meantime.
 <details>
 <summary><strong>Where can I manage the Billing details?</strong></summary>
 
-You can do so under `Settings / Billing`.
+You can do so under `Settings > Billing`.
 
 </details>
 
 <details>
 <summary><strong>Where can I update my payment method?</strong></summary>
 
-You can do so under `Settings / Billing`. Then click on `View billing details`. You'll be able to add a new payment method there.
+You can do so under `Settings > Billing`. Then click on `View billing details`. You'll be able to add a new payment method there.
 
 </details>
 
 <details>
 <summary><strong>Where can I update my billing information?</strong></summary>
 
-You can do so under `Settings / Billing`. Then click on `View billing details`. You'll be able to edit the billing information there.
+You can do so under `Settings > Billing`. Then click on `View billing details`. You'll be able to edit the billing information there.
 
 </details>
 
 <details>
 <summary><strong>Where can I access my invoices?</strong></summary>
 
-You can do so under `Settings / Billing`. Then click on `View billing details`. You'll see all your invoices at the bottom of the screen.
+You can do so under `Settings > Billing`. Then click on `View billing details`. You'll see all your invoices at the bottom of the screen.
 
 </details>
 
