--- a/packages/twenty-website/src/content/user-guide/settings/permissions.mdx
+++ b/packages/twenty-website/src/content/user-guide/settings/permissions.mdx
@@ -87,7 +87,7 @@ Control access to workspace settings in two ways:
 
 ### Workspace Action Permissions
 
-Controll access to general workspace actions:
+Control access to general workspace actions:
 
 - Toggle **Application All Access** to grant full permissions
 - Or enable individual actions such as **Send Email**, **Import CSV**, and **Export CSV**
