--- a/packages/twenty-website/src/content/user-guide/settings/settings-faq.mdx
+++ b/packages/twenty-website/src/content/user-guide/settings/settings-faq.mdx
@@ -16,7 +16,7 @@ sectionInfo: Learn how to manage your workspace.
 <details>
   <summary><strong>I accidentally created multiple workspaces but only need one. What should I do?</strong></summary>
 
-  Just delete the workspaces you no longer need, you can do so under `Settings -> General`.  
+  Just delete the workspaces you no longer need, you can do so under `Settings > General`.
   **Careful: do not delete your account** (accessible under the Profile section) — your account is shared among the different workspaces.
 </details>
 
