--- a/packages/twenty-website/src/content/user-guide/views/kanban-views.mdx
+++ b/packages/twenty-website/src/content/user-guide/views/kanban-views.mdx
@@ -12,7 +12,7 @@ Kanban views visually map out process flows, where each column stands for a dist
 
 ## Move Cards between Stages
 
- You can move each card between stages as it goes through your workflow by dragging and dropping. To proceed, hold your click on a card and move it to the next stage.
+You can move each card between stages as it goes through your workflow by dragging and dropping. To proceed, hold your click on a card and move it to the next stage.
 
 <div style={{padding:'69.01% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
@@ -39,7 +39,7 @@ You can tailor your workflow to suit your needs using stages, which represent a 
 
 ### Add Stages
 
-To add a stage, access the Select Field Settings by navigating to Settings > Data Model, selecting your object, and then the field your Kanban board depends on.
+To add a stage, access the Select field settings by navigating to Settings > Data Model, selecting your object, and then the field your Kanban board depends on.
 
 <div style={{padding:'69.01% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
@@ -62,7 +62,7 @@ To add a stage, access the Select Field Settings by navigating to Settings > Dat
 
 ### Remove Stages
 
-To remove a stage, hover the stage name or the `⋮` icon, click `Edit from settings` in the Select Field settings, and then click <b>Delete</b> next to the relevant stage.
+To remove a stage, hover the stage name or the `⋮` icon, click `Edit from settings` in the Select field settings, and then click <b>Delete</b> next to the relevant stage.
 
 <img src="/images/user-guide/kanban-views/edit-stage.png" style={{width:'100%'}}/>
 
@@ -76,7 +76,7 @@ You can also rearrange the order of fields by holding down the field name and dr
 
 ## Compact View
 
-You can also hide all the fields, and get an overview of all the opportunities at a glance. To do so, click on <b>Options</b> on the top right and turn on the toggle for <b>Compact view</b> after selecting layout in kanban view. 
+You can also hide all the fields and get an overview of all the opportunities at a glance. To do so, click on <b>Options</b> on the top right and turn on the toggle for <b>Compact view</b> after selecting layout in Kanban view.
 
 <img src="/images/user-guide/kanban-views/compact-view.png" style={{width:'100%'}}/>
 
