--- a/packages/twenty-website/src/content/user-guide/views/views-sort-filter.mdx
+++ b/packages/twenty-website/src/content/user-guide/views/views-sort-filter.mdx
@@ -11,7 +11,7 @@ You can see your records in different ways by creating views. In a view, you can
 
 ### Default View
 
-Each object comes with an unfiltered, unsorted, and undeletable view known as the Default view. It's named after the object's plural name, such as "All Companies," "All People," "All Opportunities".
+Each object comes with an unfiltered, unsorted, and undeletable view known as the Default view. It's named after the object's plural name, such as "All Companies", "All People", "All Opportunities".
 
 <img src="/images/user-guide/views/default-view.png" style={{width:'100%'}}/>
 
@@ -29,7 +29,7 @@ There are two ways to create a new view. Either directly from the `View Switcher
 2. Click the `Add View` button at the bottom of the view switcher menu.
 3. Choose an Icon and name for your View.
 4. Choose a "View type" between Table and Kanban. 
-5. (Kanban Views only) For your Kanban view, select the Select field you wish to use as the column header. The system prompts you to create one from the Settings before enabling Kanban view creation, if your object lacks a `Select field`.
+5. (Kanban Views only) For your Kanban view, select the Select field you wish to use as the column header. The system prompts you to create one from the Settings before enabling Kanban view creation, if your object lacks a `Select` type field.
 6. Click "Create" to generate your new view.
 
 The newly created view opens automatically.
@@ -79,11 +79,11 @@ When you change the `Sorting` and `Filtering` of an existing view, a `Save as ne
 ### Editing and Deleting a View
 
 To Edit or Delete a view:
-1. Open the View Switcher
-2. Hover the View you wish to edit
-3. Click on the three dots that appear upon hover to edit and delete views 
+1. Open the View Switcher.
+2. Hover the View you wish to edit.
+3. Click on the three dots that appear upon hover to edit and delete views.
 
-Upon clicking on edit, you can change the icon and the name of the view or delete the view completely
+Upon clicking on edit, you can change the icon and the name of the view or delete the view completely.
 
 <div style={{padding:'69.01% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
