--- a/packages/twenty-website/src/content/developers/self-hosting/upgrade-guide.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/upgrade-guide.mdx
@@ -21,7 +21,7 @@ If you used Docker Compose, follow these steps:
 
 If you want to upgrade your instance by few versions, e.g. from v0.33.0 to v0.35.0, you have to upgrade your instance sequentially, in this example from v0.33.0 to v0.34.0, then from v0.34.0 to v0.35.0.
 
-
+**Make sure that after each upgraded version you have non-corrupted backup.**
 
 ## Version-specific upgrade steps
 
