--- a/packages/twenty-website/src/content/user-guide/collaboration/notes.mdx
+++ b/packages/twenty-website/src/content/user-guide/collaboration/notes.mdx
@@ -20,7 +20,7 @@ Creating notes in the system is intuitive and dynamic. You can either:
 
 ### Adding Content
 
-Start typing directly or press '/' to add elements like headings, files, or images instantly.
+Start typing directly or press `/` to add elements like headings, files, or images instantly.
 
 ### Format Content
 
@@ -28,7 +28,7 @@ You can format your notes right from the editor. Use Markdown syntax, press the 
 
 Highlight the text to see more formatting options like bold, italics, and alignment options. 
 
-You can also change the background color and text color of each block to highlight important things in your note. To do so, hover over the block you want to format and click on the `⋮⋮` icon besides the `+` icon. Click on <b>Colors</b> to open up all color options for both the text and the background.
+You can also change the background color and text color of each block to highlight important things in your note. To do so, hover over the block you want to format and click on the `⋮` icon besides the `+` icon. Click on <b>Colors</b> to open up all color options for both the text and the background.
 
 <div style={{padding:'69.01% 0 0 0', position:'relative', margin: '32px 0px 0px'}}>
   <iframe 
@@ -61,7 +61,7 @@ To delete a note:
 
 1. Open the note you wish to remove by clicking on it from within the `Record page`.
 2. Select the note you want to delete within the notes tab.
-3. Use the `Option` button on the lower right corner to prompt additional actions including delete.
+3. Use the `Option` button in the lower right corner to prompt additional actions including delete.
 4. Complete your deletion when prompted with the confirmation modal.
 
 Another way to delete a note is through the notes view like you would a regular record. Please be aware that deleting a note is permanent and can't be undone.
