--- a/packages/twenty-website/src/content/user-guide/data-model/creating-records.mdx
+++ b/packages/twenty-website/src/content/user-guide/data-model/creating-records.mdx
@@ -38,7 +38,7 @@ Enter the record name then press `Enter` to save. To edit a record name, click o
 
 ## Delete record
 
-**Index View:** To delete a record, select the checkbox next to the record and click the delete button on the top right corner.
+**Index View:** To delete a record, select the checkbox next to the record and click the delete button in the top right corner.
 
 **Record Page:** Tap the `⋮` icon in the top right corner, then select delete.
 
