--- a/packages/twenty-website/src/content/user-guide/data-model/customize-your-data-model.mdx
+++ b/packages/twenty-website/src/content/user-guide/data-model/customize-your-data-model.mdx
@@ -31,7 +31,7 @@ If the concept has its own lifecycle, properties, or relationships, it usually d
 These go beyond a single field because they carry their own data and relationships.  
 
 **4. Create an object when the number of related records is open-ended.**  
-If something can be linked multiple times and you don’t know how many, it’s better as its own object. For instance, instead of creating fields like “Product 1,” “Product 2,” etc., define a **Product object** and relate it to the original record. This way, you can support one, two, or a hundred products without changing your model.  
+If something can be linked multiple times and you don’t know how many, it’s better as its own object. For instance, instead of creating fields like “Product 1”, “Product 2”, etc., define a **Product object** and relate it to the original record. This way, you can support one, two, or a hundred products without changing your model.
 
 **5. Keep it simple first.**  
 Start with fields. Move to new objects only when you feel the limits — too many fields, repeated records, or relationships that don’t fit neatly.  
