Add missing changes

--- a/packages/twenty-website/src/content/user-guide/integrations/api-webhooks.mdx
+++ b/packages/twenty-website/src/content/user-guide/integrations/api-webhooks.mdx
@@ -12,12 +12,12 @@ Twenty offers APIs in **REST and GraphQL**.
 
 ### Your unique APIs
 Unique APIs are generated for your workspace, to perfectly reflect your custom data model.  
-This means you will have a dedicated endpoint for each of your custom objects and custom fields -- which will make the dev experience much nicer!
+This means you will have a dedicated endpoint for each of your custom objects and custom fields - which will make the dev experience much nicer!
 
 
 ### Benefits of the GraphQL APIs
 - **Batch operations** are available with the GraphQL APIs. You just need to use the plural name of your object.  
-  *Example*: use the mutation ```CreateCompanies``` instead of ```CreateCompany``` for your batch creation.
+  *Example*: use the mutation `CreateCompanies` instead of `CreateCompany` for your batch creation.
     *(This is the reason why the singular and plural names of your object needs to be distinct.)*
 
 - **Upsert** option is available with the GraphQL APIs.
@@ -80,7 +80,7 @@ For instance, a webhook can alert your system in real-time when someone creates 
 
 ### Creating Webhooks
 
-1. From Settings > APIs & Webhooks → Webhooks, click `+` Create webhook.
+1. From Settings > APIs & Webhooks > Webhooks, click `+` Create webhook.
 2. Enter your URL.
 3. Click Save.
 
@@ -105,7 +105,7 @@ For instance, a webhook can alert your system in real-time when someone creates 
 
 ### Deleting Webhooks
 
-1. In Settings > APIs & Webhooks → Webhooks, find your webhook.
+1. In Settings > APIs & Webhooks > Webhooks, find your webhook.
 2. Click on your webhook and press **Delete** to remove it. A confirmation popup will appear to confirm.
 
 <ArticleEditContent></ArticleEditContent>
