Add changes suggested by Greptile AI

--- a/packages/twenty-website/src/content/developers/self-hosting/troubleshooting.mdx
+++ b/packages/twenty-website/src/content/developers/self-hosting/troubleshooting.mdx
@@ -186,7 +186,7 @@ If you're running Twenty behind a reverse proxy and experiencing connection issu
 
     After making changes, restart both the reverse proxy and Twenty containers.
 
-### Error when uploading an image - permission denied
+#### Error when uploading an image - permission denied
 
 Switching the data folder ownership on the host from root to another user and group resolves this problem.
 
