--- a/packages/twenty-website/src/content/user-guide/getting-started/configure-workspace-in-three-steps.mdx
+++ b/packages/twenty-website/src/content/user-guide/getting-started/configure-workspace-in-three-steps.mdx
@@ -22,10 +22,10 @@ If you have not done so when creating your workspace, connect you **Google or Mi
 You can do so under Settings > Accounts.
 
 You control which contacts are imported in Twenty and what gets shared with the rest of your team: full message content, subject and the metadata (sender, date, subject), or just the metadata. This is the same for your meetings.
-You can configure the visibility and the contact creation preferences under Settings → Email / Calendar.
+You can configure the visibility and the contact creation preferences under Settings > Email / Calendar.
 
 #### Using another provider?
-This is currently under beta: you can activate this feature under Settings → Releases → Lab tab.
+This is currently under beta: you can activate this feature under Settings > Releases > Lab tab.
 You can add email accounts from any provider that supports IMAP and send emails with SMTP. Synchronizing calendars with CalDAV is coming soon!
 
 
@@ -33,7 +33,7 @@ You can add email accounts from any provider that supports IMAP and send emails 
 Use the csv import to add contacts who are not in your mailbox, product data or existing enrichment you might have, as well as your previous deals, notes, tasks.
 Import via csv is available for any custom object.
 
-To import the csv file, make sure to open the Command menu ( `Cmd + K` or `Ctrl + K`) from a view listing the object you're about to upload.
+To import the csv file, make sure to open the Command menu (`Cmd + K` or `Ctrl + K`) from a view listing the object you're about to upload.
 Then, click on `Import records`.
 
 Below are a few guidelines:
@@ -72,7 +72,7 @@ Here is how to proceed:
     - If the need is punctual, hide a column clicking on its name and then `Hide`. Add a column clicking on the `+` at the very right of the table and select the one you need.
 
 - **Reorder fields**
-    - Reorder the fields from a given view clicking on Options  → Fields (from the top right). Drag and drop the fields to reorder them. 
+    - Reorder the fields from a given view clicking on Options > Fields (from the top right). Drag and drop the fields to reorder them.
     - If the need is punctual, you can `Move Left/Right` a column by clicking on its name.
 
 - **Filter records**
