--- a/packages/twenty-website/src/content/user-guide/settings/settings-faq.mdx
+++ b/packages/twenty-website/src/content/user-guide/settings/settings-faq.mdx
@@ -29,7 +29,7 @@ sectionInfo: Learn how to manage your workspace.
 <details>
   <summary><strong>How can I delete my workspace?</strong></summary>
 
-  You can do so under `Settings -> General`. We hope we'll see you around soon, thank you for giving Twenty a try!
+  You can do so under `Settings > General`. We hope we'll see you around soon, thank you for giving Twenty a try!
 </details>
 
 
