chore: lingui extract

--- a/packages/twenty-front/src/locales/ca-ES.po
+++ b/packages/twenty-front/src/locales/ca-ES.po
@@ -6665,6 +6665,11 @@ msgstr "Seleccioneu un camp d'un pas anterior"
 msgid "Select a target agent"
 msgstr "Selecciona un agent objectiu"
 
+#. js-lingui-id: jL3gox
+#: src/modules/object-record/record-field/ui/form-types/components/FormBooleanFieldInput.tsx
+msgid "Select a value"
+msgstr ""
+
 #. js-lingui-id: YcJS1T
 #: src/modules/command-menu/hooks/useWorkflowCommandMenu.ts
 #: src/modules/command-menu/hooks/__tests__/useWorkflowCommandMenu.test.tsx
