--- a/packages/twenty-front/src/locales/af-ZA.po
+++ b/packages/twenty-front/src/locales/af-ZA.po
@@ -6665,6 +6665,11 @@ msgstr "Kies 'n veld uit 'n vorige stap"
 msgid "Select a target agent"
 msgstr "Kies 'n doelagent"
 
+#. js-lingui-id: jL3gox
+#: src/modules/object-record/record-field/ui/form-types/components/FormBooleanFieldInput.tsx
+msgid "Select a value"
+msgstr ""
+
 #. js-lingui-id: YcJS1T
 #: src/modules/command-menu/hooks/useWorkflowCommandMenu.ts
 #: src/modules/command-menu/hooks/__tests__/useWorkflowCommandMenu.test.tsx
