--- a/packages/twenty-front/src/locales/da-DK.po
+++ b/packages/twenty-front/src/locales/da-DK.po
@@ -6665,6 +6665,11 @@ msgstr "Vælg et felt fra et tidligere trin"
 msgid "Select a target agent"
 msgstr "Vælg en målagent"
 
+#. js-lingui-id: jL3gox
+#: src/modules/object-record/record-field/ui/form-types/components/FormBooleanFieldInput.tsx
+msgid "Select a value"
+msgstr ""
+
 #. js-lingui-id: YcJS1T
 #: src/modules/command-menu/hooks/useWorkflowCommandMenu.ts
 #: src/modules/command-menu/hooks/__tests__/useWorkflowCommandMenu.test.tsx
