--- a/packages/twenty-front/src/locales/he-IL.po
+++ b/packages/twenty-front/src/locales/he-IL.po
@@ -6665,6 +6665,11 @@ msgstr "בחר שדה משלב קודם"
 msgid "Select a target agent"
 msgstr "בחר סוכן יעד"
 
+#. js-lingui-id: jL3gox
+#: src/modules/object-record/record-field/ui/form-types/components/FormBooleanFieldInput.tsx
+msgid "Select a value"
+msgstr ""
+
 #. js-lingui-id: YcJS1T
 #: src/modules/command-menu/hooks/useWorkflowCommandMenu.ts
 #: src/modules/command-menu/hooks/__tests__/useWorkflowCommandMenu.test.tsx
