--- a/packages/twenty-front/src/locales/sv-SE.po
+++ b/packages/twenty-front/src/locales/sv-SE.po
@@ -6669,6 +6669,11 @@ msgstr "Välj ett fält från ett tidigare steg"
 msgid "Select a target agent"
 msgstr "Välj en målagent"
 
+#. js-lingui-id: jL3gox
+#: src/modules/object-record/record-field/ui/form-types/components/FormBooleanFieldInput.tsx
+msgid "Select a value"
+msgstr ""
+
 #. js-lingui-id: YcJS1T
 #: src/modules/command-menu/hooks/useWorkflowCommandMenu.ts
 #: src/modules/command-menu/hooks/__tests__/useWorkflowCommandMenu.test.tsx
