--- a/packages/twenty-front/src/locales/zh-TW.po
+++ b/packages/twenty-front/src/locales/zh-TW.po
@@ -6665,6 +6665,11 @@ msgstr "從之前的步驟中選擇一個字段"
 msgid "Select a target agent"
 msgstr "選擇目標代理"
 
+#. js-lingui-id: jL3gox
+#: src/modules/object-record/record-field/ui/form-types/components/FormBooleanFieldInput.tsx
+msgid "Select a value"
+msgstr ""
+
 #. js-lingui-id: YcJS1T
 #: src/modules/command-menu/hooks/useWorkflowCommandMenu.ts
 #: src/modules/command-menu/hooks/__tests__/useWorkflowCommandMenu.test.tsx
