--- a/packages/twenty-front/src/locales/vi-VN.po
+++ b/packages/twenty-front/src/locales/vi-VN.po
@@ -439,6 +439,11 @@ msgstr "Thêm chuyển giao"
 msgid "Add inputs to your form"
 msgstr "Thêm đầu vào vào biểu mẫu của bạn"
 
+#. js-lingui-id: NQ8llq
+#: src/modules/object-record/record-field/ui/form-types/components/FormArrayFieldInput.tsx
+msgid "Add item"
+msgstr ""
+
 #. js-lingui-id: Hkobke
 #: src/modules/object-record/record-table/record-table-section/components/RecordTableRecordGroupSectionAddNew.tsx
 msgid "Add new"
@@ -3041,6 +3046,11 @@ msgstr "Nhập một giá trị để lưu trữ vào cơ sở dữ liệu"
 #: src/pages/settings/ai/forms/components/SettingsAIAgentForm.tsx
 msgid "Enter agent name*"
 msgstr "Nhập tên tác nhân*"
+
+#. js-lingui-id: wgNkIh
+#: src/modules/object-record/record-field/ui/form-types/components/FormArrayFieldInput.tsx
+msgid "Enter an item"
+msgstr ""
 
 #. js-lingui-id: kOybqX
 #: src/modules/workflow/workflow-steps/workflow-actions/iterator-action/WorkflowEditActionIterator.tsx
