--- a/packages/twenty-front/src/locales/ar-SA.po
+++ b/packages/twenty-front/src/locales/ar-SA.po
@@ -439,6 +439,11 @@ msgstr "إضافة نقل"
 msgid "Add inputs to your form"
 msgstr "أضف المدخلات إلى النموذج الخاص بك"
 
+#. js-lingui-id: NQ8llq
+#: src/modules/object-record/record-field/ui/form-types/components/FormArrayFieldInput.tsx
+msgid "Add item"
+msgstr ""
+
 #. js-lingui-id: Hkobke
 #: src/modules/object-record/record-table/record-table-section/components/RecordTableRecordGroupSectionAddNew.tsx
 msgid "Add new"
@@ -3041,6 +3046,11 @@ msgstr "أدخل قيمة لتخزينها في قاعدة البيانات"
 #: src/pages/settings/ai/forms/components/SettingsAIAgentForm.tsx
 msgid "Enter agent name*"
 msgstr "أدخل اسم الوكيل*"
+
+#. js-lingui-id: wgNkIh
+#: src/modules/object-record/record-field/ui/form-types/components/FormArrayFieldInput.tsx
+msgid "Enter an item"
+msgstr ""
 
 #. js-lingui-id: kOybqX
 #: src/modules/workflow/workflow-steps/workflow-actions/iterator-action/WorkflowEditActionIterator.tsx
