Add Array Form Field (#14935)
https://github.com/user-attachments/assets/93c48584-8b6c-4e44-8161-1026d056b7bf

--- a/packages/twenty-front/src/locales/pseudo-en.po
+++ b/packages/twenty-front/src/locales/pseudo-en.po
@@ -450,6 +450,11 @@ msgstr ""
 msgid "Add inputs to your form"
 msgstr ""
 
+#. js-lingui-id: NQ8llq
+#: src/modules/object-record/record-field/ui/form-types/components/FormArrayFieldInput.tsx
+msgid "Add item"
+msgstr ""
+
 #. js-lingui-id: Hkobke
 #: src/modules/object-record/record-table/record-table-section/components/RecordTableRecordGroupSectionAddNew.tsx
 msgid "Add new"
@@ -3051,6 +3056,11 @@ msgstr ""
 #. js-lingui-id: P/e64M
 #: src/pages/settings/ai/forms/components/SettingsAIAgentForm.tsx
 msgid "Enter agent name*"
+msgstr ""
+
+#. js-lingui-id: wgNkIh
+#: src/modules/object-record/record-field/ui/form-types/components/FormArrayFieldInput.tsx
+msgid "Enter an item"
 msgstr ""
 
 #. js-lingui-id: kOybqX
